{
    "name": "PlayerConrols",
    "maps": [
        {
            "name": "ControllerGamePlay",
            "id": "521ab375-9f84-4ce2-a471-a0293b3c24d4",
            "actions": [
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "1e87b24d-f622-4b56-89e9-a75907f63d70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "walk",
                    "type": "Button",
                    "id": "6dad1992-d57e-4f52-8c51-e00b87f1ef4d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "crouch",
                    "type": "Button",
                    "id": "487271e1-fd92-4690-97eb-4336f9ea0f8f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fire",
                    "type": "Button",
                    "id": "0f57708c-7a99-47c6-a812-964f8713997a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "swing",
                    "type": "Button",
                    "id": "dbba2557-5a73-4871-9bff-93ba157b93c5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a55e62a-e5cb-44df-a0fb-b8e6c1d44905",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17284696-da97-47a3-80fa-cdaa0267d5ce",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b577b3f2-8351-45fe-aa98-e8d41d1eff82",
                    "path": "<DualShockGamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95d17aa9-e331-4d07-8a91-0b99146fe8ac",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0ef0e7d-42eb-43cf-8ed4-703a2e19403c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "swing",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}